# frankensqlite

./: .gitignore  .ubsignore  ANALYSIS_OF_SPEC_DOC_DIFFS.md  COMPREHENSIVE_SPEC_FOR_FRANKENSQLITE_V1.md  COMPREHENSIVE_SPEC_FOR_FRANKENSQLITE_V1_CODEX.md  Cargo.toml  E2E_SCENARIO_MATRIX.md  E2E_SCENARIO_TRACEABILITY.md  EXISTING_SQLITE_STRUCTURE.md  README.md  _headers  _routes.json  deploy.sh  visualization_of_the_evolution_of_the_frankensqlite_specs_document_from_inception.html
.beads/: issues.jsonl
.github/workflows/: unit-test-shard-matrix.yml  verification-gates.yml  windows-vfs-interop.yml
artifacts/bd-1as.4/: planner_index_selection_e2e_artifact.json
artifacts/bd-1fbkm/: trigger_old_new_assertions.jsonl  trigger_old_new_e2e_artifact.json
artifacts/bd-1rw.2/: morsel_dispatch_e2e_artifact.json
artifacts/bd-2g5.1/: txn_slots_e2e_artifact.json
artifacts/ncivz_1_parallel_wal_buffer/: bd-ncivz.1-20260216T064332Z-4085394.jsonl
crates/fsqlite-ast/: Cargo.toml
crates/fsqlite-btree/: Cargo.toml
crates/fsqlite-cli/: Cargo.toml
crates/fsqlite-core/: Cargo.toml
crates/fsqlite-e2e/: Cargo.toml
crates/fsqlite-e2e/benches/: e2e_bench.rs
crates/fsqlite-e2e/src/: batch_runner.rs  comparison.rs  corruption.rs  corruption_demo_sqlite.rs  corruption_scenarios.rs  executor.rs  fairness.rs  fixture_metadata.rs  fsqlite_baseline.rs  fsqlite_executor.rs  fsqlite_recovery_demo.rs  golden.rs  lib.rs  logging.rs  oplog.rs  recovery_demo.rs  run_workspace.rs  sqlite_executor.rs  workload.rs
crates/fsqlite-e2e/tests/: bd_3plop_5_ssi_serialization_correctness.rs  bd_3plop_6_raptorq_self_healing.rs  bd_n0g4q_6_repair_matrix.rs  correctness_mixed_dml.rs  extension_json_fts_parity.rs  golden_integrity.rs  manifest_v1.rs  recovery_single_page.rs  recovery_wal_corruption.rs  seed_reproducibility.rs  ssi_write_skew.rs
crates/fsqlite-error/: Cargo.toml
crates/fsqlite-ext-fts3/: Cargo.toml
crates/fsqlite-ext-fts5/: Cargo.toml
crates/fsqlite-vdbe/: Cargo.toml
crates/fsqlite-vdbe/benches/: vectorized_batch.rs  vectorized_dispatch.rs
crates/fsqlite-vdbe/src/: codegen.rs  engine.rs  frame.rs  lib.rs  vectorized.rs  vectorized_agg.rs  vectorized_dispatch.rs  vectorized_join.rs  vectorized_ops.rs  vectorized_prop_tests.rs
docs/: e2e-scenario-catalog.md  vectorized_batch_format.md
e2e/: arc_warmup_report.sh  bd_2v8x_compliance.sh  bd_bca_1_compliance.sh  bd_ncivz_1_parallel_wal_buffer_pilot.sh  bd_sxm2_compliance.sh  build_matrix.sh  fts3_compat_report.sh  json_fts_wave_report.sh  spec_viz_smoke.sh
sample_sqlite_db_files/: FIXTURES.md  README.md  checksums.sha256
scripts/: bd_1rw_2_morsel_dispatch_e2e.sh  verify_backlog_quality_gate.sh  verify_e2e_log_schema.sh  verify_validation_manifest.sh
(+251 files in other folders)
