[package]
name = "fsqlite-vdbe"
version = "0.1.0"
description = "Virtual database engine bytecode interpreter"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-pager = { workspace = true }
fsqlite-btree = { workspace = true }
fsqlite-ast = { workspace = true }
fsqlite-mvcc = { workspace = true }
fsqlite-wal = { workspace = true }
fsqlite-func = { workspace = true }
tracing = { workspace = true }
crossbeam-deque = { workspace = true }

[dev-dependencies]
fsqlite-parser = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "vectorized_batch"
harness = false

[[bench]]
name = "vectorized_scan"
harness = false

[[bench]]
name = "vectorized_dispatch"
harness = false

[lints]
workspace = true
